--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+sysinfo = "0.26"
 clap = { version = "4.0", features = ["derive"] }
+thiserror = "1.0"
