--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,8 @@ license = "MIT"
 sysinfo = "0.26"
 clap = { version = "4.0", features = ["derive"] }
 anyhow = "1.0"
+
+[build-dependencies]
+clap = { version = "4.0", features = ["derive"] }
+clap_mangen = "0.2.3"
+sysinfo = "0.26"
