--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ sysinfo = "0.26"
 [build-dependencies]
 clap = { version = "4.0", features = ["derive"] }
 clap_mangen = "0.2.3"
+clap_complete = "4.0.3"
 sysinfo = "0.26"
