--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "pkill"
-description = "Simple tool to kill processes"
-version = "1.0.1"
+description.workspace = true
+version.workspace = true
 edition.workspace = true
 authors.workspace = true
 license.workspace = true
@@ -10,6 +10,8 @@ repository.workspace = true
 keywords.workspace = true
 
 [workspace.package]
+description = "Simple tool to kill processes"
+version = "1.0.1"
 edition = "2021"
 authors = ["zmrl"]
 license = "MIT"
