--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "pkill"
 description.workspace = true
-version.workspace = true
+version= "1.0.1"
 edition.workspace = true
 authors.workspace = true
 license.workspace = true
