chore(cli): add version to lib dependency

--- a/crates/pkill-cli/Cargo.toml
+++ b/crates/pkill-cli/Cargo.toml
@@ -11,5 +11,5 @@ keywords.workspace = true
 
 [dependencies]
 clap = { workspace = true }
-pkill-lib = { path = "../pkill-lib" }
+pkill-lib = { path = "../pkill-lib", version = "*" }
 
