--- a/crates/pkill-cli/Cargo.toml
+++ b/crates/pkill-cli/Cargo.toml
@@ -2,14 +2,10 @@
 name = "pkill-cli"
 version = "0.1.0"
 description = "Command-line interface for pkill"
-edition.workspace = true
-authors.workspace = true
-license.workspace = true
-readme.workspace = true
-repository.workspace = true
-keywords.workspace = true
+edition = "2021"
+publish = false
 
 [dependencies]
-clap = { workspace = true }
-pkill-lib = { path = "../pkill-lib", version = "*" }
+clap = { version = "4.0", features = ["derive"] }
+pkill-lib = { path = "../pkill-lib" }
 
