--- a/crates/pkill-lib/Cargo.toml
+++ b/crates/pkill-lib/Cargo.toml
@@ -2,13 +2,10 @@
 name = "pkill-lib"
 version = "0.1.0"
 description = "pkill function + dependency library"
-edition.workspace = true
-authors.workspace = true
-license.workspace = true
-readme.workspace = true
-repository.workspace = true
-keywords.workspace = true
+edition = "2021"
+publish = false
 
 [dependencies]
-anyhow = { workspace = true }
-sysinfo = "0.26"
+anyhow = "1.0"
+sysinfo = "0.26" 
+ 
