--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -3,6 +3,8 @@ name = "xtask"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+clap = { version = "4.0", features = ["derive"] }
+clap_mangen = "0.2.3"
+clap_complete = "4.0.3"
+cli = { path = "../crates/pkill-cli", package = "pkill-cli" }
